traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:5: error: ';' expected but ')' found.
    ecritMessage(x+getMondeHauteur()*y))
                                       ^